--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build and Release
 on:
   push:
     tags:
-      - "v*" # Trigger on version tags, e.g., v1.0.0
+      - 'v*' # Trigger on version tags, e.g., v1.0.0
   workflow_dispatch: # Allow manual triggering of the workflow
 
 jobs:
@@ -14,7 +14,7 @@ jobs:
     strategy:
       matrix:
         goos: [linux, windows, darwin] # Target operating systems
-        goarch: [amd64, arm64] # Target architectures
+        goarch: [amd64, arm64]         # Target architectures
 
     steps:
       - name: Checkout code
@@ -24,6 +24,10 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: 1.20 # Specify the Go version
+
+      - name: Download dependencies
+        run: |
+          go mod tidy
 
       - name: Build binary
         run: |
