--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: 1.20 # Specify the Go version
+          go-version: '1.20' # Specify a Go version that supports modules
 
       - name: Download dependencies
         run: |
