new build.yml version

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,36 +11,62 @@ permissions:
 
 jobs:
   build:
-    name: Build for Multiple Platforms
+    name: Build and Package
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        goos: [linux, windows, darwin] # Target operating systems
-        goarch: [amd64, arm64] # Target architectures
+        include:
+          - goos: linux
+            goarch: amd64
+            extension: ""
+          - goos: linux
+            goarch: arm64
+            extension: ""
+          - goos: windows
+            goarch: amd64
+            extension: ".exe"
+          - goos: windows
+            goarch: arm64
+            extension: ".exe"
+          - goos: darwin
+            goarch: amd64
+            extension: ""
+          - goos: darwin
+            goarch: arm64
+            extension: ""
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Go
         uses: actions/setup-go@v4
         with:
-          go-version: "1.23"
+          go-version: "1.21" # Using stable Go version
 
       - name: Download dependencies
-        run: go mod tidy
+        run: go mod download
 
       - name: Build binary
+        env:
+          GOOS: ${{ matrix.goos }}
+          GOARCH: ${{ matrix.goarch }}
         run: |
           mkdir -p dist
-          GOOS=${{ matrix.goos }} GOARCH=${{ matrix.goarch }} go build -o dist/nomi-cli-${{ matrix.goos }}-${{ matrix.goarch }}
+          go build -v -ldflags="-X 'main.Version=${{ github.ref_name }}'" -o "dist/nomi-cli-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.extension }}"
 
-      - name: Upload Build Artifacts
+      - name: Create ZIP archive
+        run: |
+          cd dist
+          zip "nomi-cli-${{ matrix.goos }}-${{ matrix.goarch }}.zip" "nomi-cli-${{ matrix.goos }}-${{ matrix.goarch }}${{ matrix.extension }}"
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v3
         with:
-          name: build-artifacts
-          path: dist/
+          name: nomi-cli-${{ matrix.goos }}-${{ matrix.goarch }}
+          path: dist/*.zip
+          retention-days: 1
 
   release:
     name: Create Release
@@ -49,16 +75,34 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Download build artifacts
+      - name: Download all artifacts
         uses: actions/download-artifact@v3
         with:
-          name: build-artifacts
+          path: artifacts
+
+      - name: Prepare release assets
+        run: |
+          mkdir -p release
+          find artifacts -name "*.zip" -exec cp {} release/ \;
+
+      - name: Generate changelog
+        id: changelog
+        run: |
+          echo "### Nomi CLI ${{ github.ref_name }}" > CHANGELOG.md
+          echo "" >> CHANGELOG.md
+          echo "#### Binary Checksums" >> CHANGELOG.md
+          echo '```' >> CHANGELOG.md
+          cd release && sha256sum *.zip >> ../CHANGELOG.md
+          echo '```' >> CHANGELOG.md
 
       - name: Create GitHub Release
-        uses: ncipollo/release-action@v1
+        uses: softprops/action-gh-release@v1
         with:
-          artifacts: dist/*
+          files: release/*.zip
+          body_path: CHANGELOG.md
           token: ${{ secrets.GITHUB_TOKEN }}
-          tag: ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: true
